--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,8 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+/* #cartas-ordenadas {
+  flex-direction: column;
+  display: flex;
+}
+
+.card {
+}
+ */
